--- a/resume.html
+++ b/resume.html
@@ -285,7 +285,7 @@ h4 span:first-child {
 				<ul class="highlights">
 					<li class="bullet">Building CLI using Node.js, FlowType, Grunt etc.</li>
 					<li class="bullet">Gained insight in maintaining and working on Open Source Project</li>
-					<li class="bullet">Accent on best practicies for working remotely and writing maintaianble and clean code.</li>
+					<li class="bullet">Accent on best practicies for working remotely and writing maintaianble and clean code</li>
 				</ul>
 			</div>
 			<div class="col-sm-12">
@@ -302,11 +302,11 @@ h4 span:first-child {
 					Student
 				</div>
 				<div class="summary">
-					<p>Scholarship for three months of open source development.</p>
+					<p>Scholarship for three months of open source development</p>
 				</div>
 				<h4>Highlights</h4>
 				<ul class="highlights">
-					<li class="bullet">Developed dynamic visual statistics for admin dashboard for Discourse using d3, Ember and Ruby on Rails.</li>
+					<li class="bullet">Developed dynamic visual statistics for admin dashboard for Discourse using d3, Ember and Ruby on Rails</li>
 					<li class="bullet">Spent time as apprentices in Namics</li>
 				</ul>
 			</div>
@@ -324,7 +324,7 @@ h4 span:first-child {
 					Javascript Developer
 				</div>
 				<div class="summary">
-					<p>My2share is a mobile flea market with social services.</p>
+					<p>My2share is a mobile flea market with social services</p>
 				</div>
 				<h4>Highlights</h4>
 				<ul class="highlights">
@@ -400,7 +400,7 @@ h4 span:first-child {
 				<ul class="keywords">
 					<li>ES6</li>
 					<li>npm</li>
-					<li>grunt</li>
+					<li>FlowType</li>
 				</ul>
 			</div>
 			<div class="col-sm-6">
@@ -417,7 +417,7 @@ h4 span:first-child {
 			</div>
 			<div class="col-sm-6">
 				<div class="name">
-					<h4>Web Development</h4>
+					<h4>Misc</h4>
 				</div>
 				<ul class="keywords">
 					<li>Git</li>
