--- a/resume.html
+++ b/resume.html
@@ -225,7 +225,7 @@ h4 span:first-child {
 			<div class="col-sm-6">
 				<strong>Website</strong>
 				<div class="website">
-					<a href="saintsebastian.github.io">saintsebastian.github.io</a>
+					<a href="https://saintsebastian.github.io">https://saintsebastian.github.io</a>
 				</div>
 			</div>
 			</div>
@@ -251,7 +251,7 @@ h4 span:first-child {
 					</strong>
 					<div class="username">
 						<div class="url">
-							<a href="github.com/saintsebastian">saintsebastian</a>
+							<a href="https://github.com/saintsebastian">saintsebastian</a>
 						</div>
 					</div>
 				</div>
@@ -273,7 +273,7 @@ h4 span:first-child {
 					</span>
 				</h4>
 				<div class="website pull-right">
-					<a href="https://developer.mozilla.org/en-US/Add-ons/WebExtensions, https://github.com/mozilla/web-ext">https://developer.mozilla.org/en-US/Add-ons/WebExtensions, https://github.com/mozilla/web-ext</a>
+					<a href="https://developer.mozilla.org/en-US/Add-ons/WebExtensions">https://developer.mozilla.org/en-US/Add-ons/WebExtensions</a>
 				</div>
 				<div class="position">
 					Intern
@@ -296,7 +296,7 @@ h4 span:first-child {
 					</span>
 				</h4>
 				<div class="website pull-right">
-					<a href="railsgirlssummerofcode.com">railsgirlssummerofcode.com</a>
+					<a href="http://railsgirlssummerofcode.org">http://railsgirlssummerofcode.org</a>
 				</div>
 				<div class="position">
 					Student
@@ -318,7 +318,7 @@ h4 span:first-child {
 					</span>
 				</h4>
 				<div class="website pull-right">
-					<a href="https://my2share.de">https://my2share.de</a>
+					<a href="http://my2share.de">http://my2share.de</a>
 				</div>
 				<div class="position">
 					Javascript Developer
