--- a/resume.html
+++ b/resume.html
@@ -279,13 +279,13 @@ h4 span:first-child {
 					Intern
 				</div>
 				<div class="summary">
-					<p>Internship as a result of recieving Outreachy scholarship</p>
+					<p>Internship as a result of receiving Outreachy scholarship</p>
 				</div>
 				<h4>Highlights</h4>
 				<ul class="highlights">
 					<li class="bullet">Building CLI using Node.js, FlowType, Grunt etc.</li>
 					<li class="bullet">Gained insight in maintaining and working on Open Source Project</li>
-					<li class="bullet">Accent on best practicies for working remotely and writing maintaianble and clean code</li>
+					<li class="bullet">Accent on best practicies for working remotely and writing maintainable and clean code</li>
 				</ul>
 			</div>
 			<div class="col-sm-12">
@@ -314,7 +314,7 @@ h4 span:first-child {
 				<h4 class="strike-through">
 					<span>My2share</span>
 					<span class="date">
-						2014-12-01 — 2016-07-01
+						2014-12-01 — 2017-06-15
 					</span>
 				</h4>
 				<div class="website pull-right">
@@ -388,19 +388,11 @@ h4 span:first-child {
 					<h4>JavaScript</h4>
 				</div>
 				<ul class="keywords">
-					<li>FrontEnd Frameworks</li>
+					<li>NodeJS</li>
+					<li>npm</li>
 					<li>d3.js</li>
 					<li>titanium/appcelerator</li>
-				</ul>
-			</div>
-			<div class="col-sm-6">
-				<div class="name">
-					<h4>NodeJS</h4>
-				</div>
-				<ul class="keywords">
-					<li>ES6</li>
-					<li>npm</li>
-					<li>FlowType</li>
+					<li>JS FrontEnd Frameworks</li>
 				</ul>
 			</div>
 			<div class="col-sm-6">
@@ -412,7 +404,7 @@ h4 span:first-child {
 					<li>CSS</li>
 					<li>Sass</li>
 					<li>Accesible web</li>
-					<li>Browser compatabilty</li>
+					<li>Browser compatibility</li>
 				</ul>
 			</div>
 			<div class="col-sm-6">
@@ -422,6 +414,7 @@ h4 span:first-child {
 				<ul class="keywords">
 					<li>Git</li>
 					<li>Ruby on Rails</li>
+					<li>Python</li>
 					<li>Postgres</li>
 					<li>SQL</li>
 					<li>PHP</li>
