update, added MOOCs

--- a/resume.html
+++ b/resume.html
@@ -336,6 +336,36 @@ h4 span:first-child {
 		</div>
 	</section>
 
+	<section id="volunteer" class="row">
+		<aside class="col-sm-3">
+			<h3>Volunteer</h3>
+		</aside>
+		<div class="col-sm-9">
+			<div class="row">
+			<div class="col-sm-12">
+				<h4 class="strike-through">
+					<span>Mozilla</span>
+					<span class="date">
+						2017-04-01 — 
+					</span>
+				</h4>
+				<div class="website pull-right">
+					<a href="http://mozilla.com/">http://mozilla.com/</a>
+				</div>
+				<div class="position">
+					Volunteer
+				</div>
+				<div class="summary">
+					<p>Contributing to WebExtensions CLI and related tools</p>
+				</div>
+				<h4>Highlights</h4>
+				<ul class="highlights">
+					<li class="bullet">Invited to Mozilla All Hands</li>
+				</ul>
+			</div>
+			</div>
+		</div>
+	</section>
 	
 	<section id="education" class="row">
 		<aside class="col-sm-3">
@@ -343,6 +373,27 @@ h4 span:first-child {
 		</aside>
 		<div class="col-sm-9">
 			<div class="row">
+			<div class="col-sm-12">
+				<h4 class="strike-through">
+					<span>Relevant MOOCs</span>
+					<span class="date">
+						2016-10-01 — 
+					</span>
+				</h4>
+				<div class="area">
+					Computer Science
+				</div>
+				<div class="studyType">
+					MOOC
+				</div>
+				<h4>Courses</h4>
+				<ul class="courses">
+					<li>Build a Modern Computer from First Principles: From Nand to Tetris, Hebrew University of Jerusalem</li>
+					<li>Algorithms: Design and Analysis, Stanford University</li>
+					<li>Introduction to Mathematical Thinking, Stanford University</li>
+					<li>Introduction to Computer Science and Programming Using Python, MIT</li>
+				</ul>
+			</div>
 			<div class="col-sm-12">
 				<h4 class="strike-through">
 					<span>University of Marburg</span>
@@ -388,7 +439,7 @@ h4 span:first-child {
 					<h4>JavaScript</h4>
 				</div>
 				<ul class="keywords">
-					<li>NodeJS</li>
+					<li>Node.js</li>
 					<li>npm</li>
 					<li>d3.js</li>
 					<li>titanium/appcelerator</li>
